# rendershop

./: .clang-format  .clang-tidy  .cmake-format.json  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  cmake-variants.json  conanfile.txt  iwyu.imp  renderdeck.sln  rendershop.sln
Project1/: Project1.vcxproj  main.cpp
apps/editor/: CMakeLists.txt
apps/editor/include/: AbstractPin.hpp  AbstractPort.hpp  FrameControllerNode.h  FrameControllerPipe.h  ImGuiUtilities.hpp  InputDataPin.h  InputDataPort.h  InputEventPin.h  InputEventPort.h  InputPin.h  InputPort.h  Node.h  NodeCanvas.h  OutputDataPin.h  OutputDataPinDelegate.h  OutputDataPort.h  OutputDataPortDelegate.h  OutputEventPin.h  OutputEventPort.h  OutputPin.h  OutputPort.h  UniqueID.hpp  Window.h
apps/editor/src/: FrameControllerNode.cpp  FrameControllerPipe.cpp  InputDataPin.cpp  InputDataPort.cpp  InputEventPin.cpp  InputEventPort.cpp  InputPin.cpp  InputPort.cpp  Node.cpp  NodeCanvas.cpp  OutputDataPin.cpp  OutputDataPinDelegate.cpp  OutputDataPort.cpp  OutputDataPortDelegate.cpp  OutputEventPin.cpp  OutputEventPort.cpp  OutputPin.cpp  OutputPort.cpp  StylesheetWindow.cpp  Window.cpp  main.cpp
libs/algorithms/: CMakeLists.txt
libs/algorithms/include/clk/algorithms/: boolean.hpp  color.hpp  decompose_color.h  decompose_color.hpp  grayscale_color_node.h  grayscale_color_node.hpp  init.hpp  math.hpp  mix_colors.h  mix_colors.hpp  random_color_source.h  random_color_source.hpp  value_to_color.h  value_to_color.hpp
libs/algorithms/include/rsp/algorithms/: DecomposeColor.h  GrayscaleColorNode.h  MixColors.h  RandomColorSource.h  ValueToColor.h  decompose_color.h  grayscale_color_node.h  mix_colors.h  random_color_source.h  value_to_color.h
libs/algorithms/src/: DecomposeColor.cpp  GrayscaleColorNode.cpp  MixColors.cpp  RandomColorSource.cpp  ValueToColor.cpp  boolean.cpp  color.cpp  decompose_color.cpp  grayscale_color_node.cpp  init.cpp  math.cpp  mix_colors.cpp  random_color_source.cpp  value_to_color.cpp
libs/base/: CMakeLists.txt
libs/base/include/clk/base/: algorithm.hpp  algorithm_node.hpp  constant_node.hpp  graph.hpp  input.hpp  node.hpp  output.hpp  port.hpp  sentinel.hpp
libs/base/include/rshp/base/: AbstractDataPort.hpp  AbstractPipe.hpp  AbstractPort.hpp  AbstractSink.hpp  AbstractSource.hpp  ColorRGB.hpp  ColorRGBA.hpp  EventPipe.hpp  InputDataPort.hpp  InputEventPort.hpp  InputPort.hpp  OutputDataPort.hpp  OutputEventPort.hpp  OutputPort.hpp  Pipe.hpp  Sink.hpp  Source.hpp  Timestamp.hpp
libs/base/include/rshp/base/node/: AbstractNode.hpp  AbstractSink.hpp  AbstractSource.hpp  EventNode.hpp  Node.hpp  Sink.hpp  Source.hpp
libs/base/include/rshp/base/port/: DataPort.hpp  InputDataPort.hpp  InputEventPort.h  InputEventPort.hpp  InputPort.hpp  OutputDataPort.hpp  OutputEventPort.h  OutputEventPort.hpp  OutputPort.hpp  Port.hpp
libs/base/include/rsp/base/: Algorithm.hpp  AlgorithmNode.hpp  Bounded.hpp  ColorRGB.hpp  ColorRGBA.hpp  ConstantNode.hpp  Data.hpp  DataTypeName.hpp  Graph.hpp  Meta.hpp  Node.hpp  Observable.hpp  Port.hpp  Sentinel.hpp  TimeUnit.hpp  Timestamp.hpp  TypeList.hpp  Utility.hpp  algorithm_node.hpp  constant_node.hpp
libs/base/include/rsp/base/node/: AbstractNode.hpp  AbstractSink.hpp  AbstractSource.hpp  EventNode.hpp  FixedSource.hpp  Node.hpp  Sink.hpp  Source.hpp
libs/base/include/rsp/base/port/: DataPort.hpp  EventPort.hpp  InputDataPort.hpp  InputEventPort.h  InputPort.hpp  OutputDataPort.hpp  OutputEventPort.h  OutputPort.hpp  Port.hpp
libs/base/src/port/: InputEventPort.cpp  OutputEventPort.cpp
libs/gui/: CMakeLists.txt
libs/gui/include/clk/gui/: init.h  init.hpp  main_window.hpp  panel.h  panel.hpp
libs/gui/include/clk/gui/widgets/: editor.hpp  graph_editor.h  graph_editor.hpp  graph_viewer.h  graph_viewer.hpp  performance_overlay.hpp  viewer.hpp  widget.hpp
libs/gui/include/rshp/gui/: Animation.hpp  ImGuiUtilities.hpp  Stylesheet.hpp  UIDebug.hpp  UniqueID.hpp
libs/gui/include/rsp/gui/: Animation.hpp  ImGuiUtilities.hpp  Init.h  Panel.h  Stylesheet.hpp  UIDebug.hpp  UniqueID.hpp
libs/gui/src/: Init.cpp  Panel.cpp  init.cpp  main_window.cpp  panel.cpp
libs/gui/src/internal/: NodeEditors.hpp  NodeViewers.hpp  PortEditors.hpp  PortViewers.hpp  SelectionManager.hpp  WidgetCache.hpp  layout_solver.hpp  node_editors.hpp  node_viewers.hpp  port_editors.hpp  port_viewers.hpp  selection_manager.hpp  widget_cache.hpp
libs/gui/src/nodes/: FrameControllerNode.cpp  InputDataPort.cpp  InputEventPort.cpp  InputPort.cpp  Node.cpp  OutputDataPort.cpp  OutputDataPortDelegate.cpp  OutputEventPort.cpp  OutputPort.cpp
libs/gui/src/panels/: NodeEditor.cpp  Panel.cpp  RootPanel.cpp  StyleEditor.cpp
libs/gui/src/widgets/: GraphEditor.cpp  GraphViewer.cpp  graph_editor.cpp  graph_viewer.cpp
libs/nodes/: CMakeLists.txt
libs/nodes/include/rshp/nodes/: ClearBackgroundSink.h  DecomposeColor.h  GrayscaleColorNode.h  MixColors.h  RandomColorSource.h  Timer.hpp  ValueToColor.h
libs/nodes/include/rsp/nodes/: ClearBackgroundSink.h  DecomposeColor.h  GrayscaleColorNode.h  MixColors.h  RandomColorSource.h  Timer.hpp  ValueToColor.h
libs/nodes/src/: ClearBackgroundSink.cpp  DecomposeColor.cpp  GrayscaleColorNode.cpp  MixColors.cpp  RandomColorSource.cpp  Timer.cpp  ValueToColor.cpp
libs/pipes/: CMakeLists.txt
libs/pipes/include/rshp/pipes/: ClearBackgroundSink.h  DecomposeColor.h  GrayscaleColorPipe.h  MixColors.h  RandomColorSource.h  Timer.hpp  ValueToColor.h
libs/pipes/src/: ClearBackgroundSink.cpp  DecomposeColor.cpp  GrayscaleColorPipe.cpp  MixColors.cpp  RandomColorSource.cpp  Timer.cpp  ValueToColor.cpp
libs/util/: CMakeLists.txt
libs/util/include/clk/util/: bounded.hpp  color_rgb.hpp  color_rgba.hpp  data_type_name.hpp  predicates.hpp  projections.hpp  time_unit.hpp  timestamp.hpp  type_list.hpp
libs/util/include/rsp/util/: Bounded.hpp  ColorRGB.hpp  ColorRGBA.hpp  DataTypeName.hpp  Observable.hpp  TimeUnit.hpp  Timestamp.hpp  TypeList.hpp  color_rgb.hpp  color_rgba.hpp  data_type_name.hpp  time_unit.hpp  type_list.hpp
(+274 files in other folders)
